--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                <h5 class="black-text explanation" style="padding-top: 1vh;"></h5>
                <br>
                <h5 style="padding-top: 5vh;">
-                  <a href="//app.ikanbanonline.com" class="btn waves-effect waves-light blue pulse">GET STARTED NOW</a>
+                  <a href="//app.ikanbanonline.com" class="btn waves-effect waves-light blue">GET STARTED NOW</a>
                </h5>
             </div>
             <div class="col s12 l6 m6">
@@ -170,7 +170,7 @@ money_off
          new TypeIt('.iKanbanTyped', {
          strings: ["iKa nban"],
          autoStart: true,
-         breakLines: true,
+         breakLines: false,
          lifeLike:true,
          cursorChar:''
          });
