--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                <h1><b class="iKanbanTyped">iKanban</b></h1>
                <h3>A systematic approach to project management ...</h3>
                <br>
-               <h5 class="black-text explanation" style="padding-top: 1vh;"></h5>
+               <h5 class="black-text explanation" style="padding: 1vh;"></h5>
                <br>
                <h5 style="padding-top: 5vh;">
                   <a href="//app.ikanbanonline.com" class="btn waves-effect waves-light blue">GET STARTED NOW</a>
