--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                <h1><b class="iKanbanTyped">iKanban</b></h1>
                <h3>A systematic approach to project management ...</h3>
                <br>
-               <h5 class="black-text explanation" style="padding: 1vh;"></h5>
+               <h5 class="black-text explanation" style="padding: 1vh;height: 3vh;"></h5>
                <br>
                <h5 style="padding-top: 5vh;">
                   <a href="//app.ikanbanonline.com" class="btn waves-effect waves-light blue">GET STARTED NOW</a>
@@ -74,14 +74,14 @@
                <div class="col s12 m4">
                   <div class="icon-block">
                      <h2 class="center blue-text"><i class="material-icons">flash_on</i></h2>
-                     <h5 class="center">Speeds up development</h5>
+                     <h5 class="center">Lean Project Management</h5>
                      <p class="light">Because speed matters , iKanban has every element intuitively positioned to ensure a user makes swift updates </p>
                   </div>
                </div>
                <div class="col s12 m4">
                   <div class="icon-block">
                      <h2 class="center blue-text"><i class="material-icons">group</i></h2>
-                     <h5 class="center">Collaboration</h5>
+                     <h5 class="center">Reduce waste</h5>
                      <p class="light">It has never been this easier to collaborate online . iKanban app helps your team work together .</p>
                   </div>
                </div>
@@ -89,7 +89,7 @@
                   <div class="icon-block">
                      <h2 class="center blue-text"><i class="material-icons">settings</i></h2>
                      <h5 class="center">
-                        <h5 data-highlightable="1" class="center gjs-comp-selected c5102">User Experience Focused</h5>
+                        <h5 data-highlightable="1" class="center gjs-comp-selected c5102">Simplified Project management</h5>
                      </h5>
                      <p class="light">By utilizing elements and principles of UX Design, we were able to create a tool that you can use with ease . </p>
                   </div>
