--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
          cursorChar:''
          });
       </script>
-      <script type="text/javascript" src="js/app.js"></script>
+<!--      <script type="text/javascript" src="js/app.js"></script> -->
 
       <script src="https://cdn.logrocket.io/LogRocket.min.js" crossorigin="anonymous"></script>
 <script>window.LogRocket && window.LogRocket.init('11ugiw/ikanban');</script>
