--- a/index.html
+++ b/index.html
@@ -275,12 +275,22 @@ return new Promise(function(resolve, reject){
 }
 
 let mode = getUrlParameter('mode');
+let devUserName = getUrlParameter('devUser') || 'unidentified';
+let devEmail = getUrlParameter('devEmail') || 'unidentified';
+let currentTime = new Date();
+
+
 
 if (mode == 'dev'){
    include('https://cdn.logrocket.io/LogRocket.min.js')
    .then(()=>{
-      console.log('loaded LogRocket')
+      console.log('loaded LogRocket');
       window.LogRocket && window.LogRocket.init('11ugiw/ikanban');
+      LogRocket.identify('Developer Tester', {
+         name: devUser,
+         email: devEmail,
+         time: currentTime
+      });
    })
 }
       </script>
