Updated some files , fixed some bugs

--- a/index.html
+++ b/index.html
@@ -274,10 +274,10 @@ return new Promise(function(resolve, reject){
   */
 }
 
-let mode = getUrlParameter('mode');
-let devUserName = getUrlParameter('devUser') || 'unidentified';
-let devEmail = getUrlParameter('devEmail') || 'unidentified';
-let currentTime = new Date();
+const mode = getUrlParameter('mode');
+const devUserName = getUrlParameter('devUser') || 'unidentified';
+const devEmail = getUrlParameter('devEmail') || 'unidentified';
+const currentTime = new Date();
 
 
 
