Updated some files , fixed some bugs

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ if (mode == 'dev'){
       console.log('loaded LogRocket');
       window.LogRocket && window.LogRocket.init('11ugiw/ikanban');
       LogRocket.identify('Developer Tester', {
-         name: devUser,
+         name: devUserName,
          email: devEmail,
          time: currentTime
       });
